--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.11</artifactId>
-      <version>0.10.0.1</version>
+      <version>2.2.0</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -61,9 +61,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.librato.metrics</groupId>
-      <artifactId>metrics-librato</artifactId>
-      <version>5.0.5</version>
+      <groupId>com.appoptics.metrics</groupId>
+      <artifactId>metrics-appoptics</artifactId>
+      <version>1.0.5</version>
     </dependency>
 
   </dependencies>
