--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - checkout
       - run: gem install package_cloud
       - run: sudo apt-get -q update
-      - run: sudo apt-get -yq install openjdk-8-jdk maven
+      - run: sudo apt-get -yq install openjdk-11-jdk-headless maven
       # Download and cache dependencies
       - restore_cache:
           keys:
